--- a/Pass-it-around/package.json
+++ b/Pass-it-around/package.json
@@ -2,7 +2,7 @@
   "name": "pass-it-around",
   "version": "1.0.0",
   "description": "",
-  "main": "bottles.js",
+  "main": "bugs-in-the-code.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
