--- a/Captains-log/package.json
+++ b/Captains-log/package.json
@@ -2,7 +2,7 @@
   "name": "captains-log",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "method-override": "^3.0.0"
+    "express-react-views": "^0.11.0",
+    "method-override": "^3.0.0",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   }
 }
